<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/text_eula"
            android:text="@string/eula" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula1"
                android:layout_below="@+id/text_eula"
                android:text="@string/eula1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula2"
                android:layout_below="@+id/text_eula1"
                android:text="@string/eula2" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula3"
                android:layout_below="@+id/text_eula2"
                android:text="@string/eula3" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula4"
                android:layout_below="@+id/text_eula3"
                android:text="@string/eula4" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula5"
                android:layout_below="@+id/text_eula4"
                android:text="@string/eula5" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula6"
                android:layout_below="@+id/text_eula5"
                android:text="@string/eula6" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula7"
                android:layout_below="@+id/text_eula6"
                android:text="@string/eula7" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula8"
                android:layout_below="@+id/text_eula7"
                android:text="@string/eula8" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula9"
                android:layout_below="@+id/text_eula8"
                android:text="@string/eula9" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_eula10"
                android:layout_below="@+id/text_eula9"
                android:text="@string/eula10" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>