<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.sr.eeecompanion.fragment_syllabus_caed">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="#ffdddddd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/caed_name"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:gravity="center"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed1"
                        android:textColor="#666"
                        android:textSize="14dp"
                        android:textAlignment="center"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">
                    <TextView
                        android:id="@+id/caed1"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="UNIT 1"
                        android:textColor="#666"
                        android:textSize="14dp" />
                    <TextView
                        android:layout_below="@+id/caed1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed2"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">
                    <TextView
                        android:id="@+id/caed2"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="UNIT 2"
                        android:textColor="#666"
                        android:textSize="14dp" />
                    <TextView
                        android:layout_below="@+id/caed2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed3"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed4"
                        android:textColor="#666"
                        android:textSize="14dp"
                        android:textAlignment="center"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">
                    <TextView
                        android:id="@+id/caed3"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="UNIT 3"
                        android:textColor="#666"
                        android:textSize="14dp" />
                    <TextView
                        android:layout_below="@+id/caed3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed5"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/caed9"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="TEXTBOOKS"
                        android:textColor="#666"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_below="@+id/caed9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed6"
                        android:textAlignment="center"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/caed10"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="REFERENCE BOOKS"
                        android:textColor="#666"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_below="@+id/caed10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed7"
                        android:textAlignment="center"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/caed11"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="NOTE"
                        android:textColor="#666"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_below="@+id/caed11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:padding="8dp"
                        android:text="@string/caed8"
                        android:textAlignment="center"
                        android:textColor="#666"
                        android:textSize="14dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
